[package]
name = "chelper"
version = "0.1.0"
authors = ["István Bozsó <bozso.istvan@csfk.mta.hu>"]
edition = "2018"

[lib]
name = "chelp"
crate-type = ["staticlib", "cdylib"] # Creates static lib
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
once_cell = { version = "1.4" }

#[dev-dependencies]

[build-dependencies]
cbindgen = "0.15.0"
cc = "1.0.61"
